--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,11 @@
     <style name="Base.Theme.UrbanRoots" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="colorPrimary">@color/verde</item>
+
+        <item name="colorSecondary">@color/azul</item>
+
     </style>
 
     <style name="Theme.UrbanRoots" parent="Base.Theme.UrbanRoots" />
